# Ollama-load-balancer

./: .env.example  README.md  docker-compose.yml  generate-compose.sh
Python_lb/: Dockerfile  docker-compose.yml  requirements.txt  server.py
Python_lb/app/: config.py  discovery.py  logic.py  main.py  proxy.py  utils.py
Rust_lb/: Cargo.toml  Dockerfile
Rust_lb/src/: discovery.rs  gpu_utilization_monitor.rs  main.rs  vram_monitor.rs
docs/: CLI.md  GPU_Assignment.md
